<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShareAPP" >

    <ImageView
        android:id="@+id/qrImage"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/qrcode"
        app:srcCompat="@drawable/qr" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/shareAppVia" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/shareText"
        android:textSize="20sp" />
</LinearLayout>