<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maxverstappenbg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="301dp"
        android:layout_height="216dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/formula1logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoformula"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/designedBy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonChampionship"
        android:layout_width="139dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#9C000000"
        android:drawableTop="@drawable/championshipimg"
        android:onClick="changeToChampionship"
        android:text="@string/championship"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonShare"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDrivers"
        android:layout_width="140dp"
        android:layout_height="93dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#9C000000"
        android:drawableTop="@drawable/driversimg"
        android:text="@string/drivers"
        android:textSize="12sp"
        android:onClick="changeToDrivers"
        app:layout_constraintBottom_toTopOf="@+id/buttonVideos"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="134dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#9C000000"
        android:drawableTop="@drawable/shareimg"
        android:text="@string/share"
        android:onClick="changeToShare"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSchedule"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVideos"
        android:layout_width="141dp"
        android:layout_height="94dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#9C000000"
        android:drawableTop="@drawable/videosimg"
        android:text="@string/videos"
        android:textSize="12sp"
        android:onClick="changeToVideos"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShare"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSchedule"
        android:layout_width="141dp"
        android:layout_height="94dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#9C000000"
        android:drawableTop="@drawable/scheduleimg"
        android:text="@string/schedule"
        android:onClick="changeToSchedule"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>